# purchase-workflow

./: README.md  test-requirements.txt
.github/workflows/: test.yml
purchase_all_shipments/: README.rst  __manifest__.py
purchase_all_shipments/i18n/: purchase_all_shipments.pot
purchase_all_shipments/tests/: test_three_step_reception.py
purchase_allowed_product/i18n/: fr.po
purchase_cancel_reason/: README.rst  __manifest__.py
purchase_cancel_reason/i18n/: am.po  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_GB.po  es.po  es_AR.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_ES.po  es_MX.po  es_PE.po  es_PY.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_BE.po  fr_CA.po  fr_CH.po  (+39 more)
purchase_deposit/: README.rst  __manifest__.py
purchase_force_invoiced_quantity/: README.rst
purchase_manual_delivery/: README.rst  __manifest__.py
purchase_order_archive/: README.rst  __manifest__.py
purchase_order_line_sequence/: README.rst
purchase_order_secondary_unit/: README.rst
purchase_order_type/: README.rst  __manifest__.py
purchase_quick/: README.rst  __manifest__.py
purchase_request/: README.rst  __manifest__.py
purchase_request_tier_validation/: README.rst  __manifest__.py
purchase_requisition_tier_validation/: README.rst  __manifest__.py
purchase_stock_price_unit_sync/: README.rst  __manifest__.py
purchase_transport_mode/: README.rst  __manifest__.py
purchase_vendor_promotion/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
vendor_transport_lead_time/: README.rst  __manifest__.py
(+109 files in other folders)
