[project]
name = "odoo-addons-oca-purchase-workflow"
version = "18.0.20250115.0"
dependencies = [
    "odoo-addon-purchase_all_shipments==18.0.*",
    "odoo-addon-purchase_cancel_reason==18.0.*",
    "odoo-addon-purchase_commercial_partner==18.0.*",
    "odoo-addon-purchase_last_price_info==18.0.*",
    "odoo-addon-purchase_order_archive==18.0.*",
    "odoo-addon-purchase_order_line_menu==18.0.*",
    "odoo-addon-purchase_order_type==18.0.*",
    "odoo-addon-purchase_request==18.0.*",
    "odoo-addon-purchase_request_department==18.0.*",
    "odoo-addon-vendor_transport_lead_time==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
